--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,17 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+@font-face {
+    font-family: 'PressStart2P';
+    src: 
+      url(/fonts/PressStart2P-Regular.woff) format('woff'),
+      local('PressStart2P');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter-Variable';
+  src:
+    local('Inter-Variable'),
+    url(/fonts/Inter-Variable.woff2) format('woff2');
+  font-weight: 400 700;
+  font-display: swap;
+}
