--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,4 +15,7 @@
     --bg-gradient-dark: #1a1a1a;
     --text-shadow: rgb(255, 255, 255, 0.5);
     --color-backdrop: rgb(0 0 0 / 0.3);
+    --heart-contour: #000;
+    --heart-body: #FF0000;
+    --heart-sparks: #FF0000;
 }
