--- a/styles/style.css
+++ b/styles/style.css
@@ -92,13 +92,19 @@
 
   .title-text {
     font-size: 14px;
+    line-height: 38px;
+  }
+
+  .header-block {
+    padding-block-start: 111px;
+    padding-block-end: 111px;
   }
 }
 
 .card-image-wrapper {
   overflow: hidden;
   border: var(--border-color) solid 2px;
-  
+  position: relative;
 }
 
 .card-auto {
@@ -133,14 +139,14 @@
 
 .button-grup {
   align-self: flex-end;
+  margin-inline-end: -5px;
 }
 
 .card__icon-button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  inline-size: 155px;
-  gap: 12px;
+  inline-size: 186px;
   background-color: var(--background-color);
   border: none;
   position: relative;
@@ -167,7 +173,7 @@
   overflow: hidden;
   border: 2px solid var(--border-color);
   padding-block: 9px;
-  padding-inline: 17px;
+  padding-inline: 35px;
   cursor: pointer;
   position: relative;
 }
@@ -213,6 +219,75 @@
   transition: box-shadow 0.3s ease;
 }
 
+.like-icon .sparks {
+  /* искры сердца */
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s 1 alternate;
+}
+
+.like-icon .heart { 
+/* сгруппированое сердце */
+  transform-origin: center;
+}
+
+.like-icon.is-liked .heart { 
+    animation: heart 0.1s ease-in 1 alternate;
+}
+
+.like-icon .core {
+  /* центр сердца */
+  fill: none;
+  transition: fill 0.3s 0.03s linear;
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour);
+  transition: fill 0.3s linear;
+}
+
+.like-icon .main-body {
+  /* основное тело сердца */
+  fill: none;
+  transition: fill 0.3s linear;
+}
+ 
+.like-icon:hover .main-body {
+  fill: var(--heart-contour);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--heart-body);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-body);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon .contour {
+  /* обводка сердца */
+  fill: var(--heart-contour);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-body);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-body);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-body);
+  transition: fill 0.3s 0.09s linear;
+}
 
 .watermark {
   z-index: 1;
@@ -224,9 +299,10 @@
 .watermark-text {
   font-family: var(--font-accent);
   mix-blend-mode: hard-light;
-  font-size: var(--font-size-body);
+  font-size: 14px;
   line-height: 14px;
-  color: var(--text-color), 0.5;
+  color: var(--text-color);
+  opacity: 0.5;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: 1px var(--text-shadow);
@@ -325,6 +401,7 @@
     inline-size: 306px;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
   }
 
   .floppy-svg {
@@ -372,6 +449,7 @@ dialog::backdrop {
   background-color: var(--background-color);
   inline-size: 293px;
   block-size: 39px;
+  margin-block-start: 25px;
 }
 
 .button__text-dialog-ok {
