--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -11,7 +11,7 @@
     font-family: 'Inter-Variable';
   src:
     local('Inter-Variable'),
-    url(/fonts/Inter-Variable.woff2) format('woff2');
-  font-weight: 400 700;
+    url(/fonts/Inter-Variable.woff2) format('woff2') format("woff2 supports variations");
+  font-weight: 400 785;
   font-display: swap;
 }
