--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
 @font-face {
     font-family: 'PressStart2P';
     src: 
-      url(/fonts/PressStart2P-Regular.woff) format('woff'),
+      url(./fonts/PressStart2P-Regular.woff) format('woff'),
       local('PressStart2P');
     font-display: swap;
 }
@@ -11,7 +11,7 @@
     font-family: 'Inter-Variable';
   src:
     local('Inter-Variable'),
-    url(/fonts/Inter-Variable.woff2) format('woff2') format("woff2 supports variations");
+    url(./fonts/Inter-Variable.woff2) format('woff2') format("woff2 supports variations");
   font-weight: 400 785;
   font-display: swap;
 }
