--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,16 +2,17 @@
 @font-face {
     font-family: 'PressStart2P';
     src: 
-      url(./fonts/PressStart2P-Regular.woff) format('woff'),
+      url(./PressStart2P-Regular.woff) format('woff'),
       local('PressStart2P');
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Inter-Variable';
-  src:
-    local('Inter-Variable'),
-    url(./fonts/Inter-Variable.woff2) format('woff2') format("woff2 supports variations");
+    src:
+      local('Inter-Variable'),
+      url(./Inter-Variable.woff2) format('woff2 supports variations'),
+      url(./Inter-Variable.woff2) format('woff2-variations');
   font-weight: 400 785;
   font-display: swap;
 }
