--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,10 +1,11 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
 @font-face {
     font-family: 'PressStart2P';
-    src: 
-      url(./PressStart2P-Regular.woff) format('woff'),
-      local('PressStart2P');
+    src:
+      local('PressStart2P'),
+      url(./PressStart2P-Regular.woff) format('woff');
     font-display: swap;
+    font-weight: 400;
 }
 
 @font-face {
